Change STATUS from 'INJECTING' to 'LOCKED'

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <script>
         const VALUE = "16.9B";
-        const STATUS = "INJECTING";
+        const STATUS = "LOCKED";
     </script>
 </body>
 </html>
